[package]
authors     = { workspace = true }
build       = "build.rs"
description = "Circuit standalone node"
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "circuit-standalone-node"
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "circuit-standalone"
path = "src/main.rs"

[dependencies]
# Extras

clap      = { version = "3.0", features = [ "derive" ] }
futures   = "0.3.21"
jsonrpsee = { version = "0.14.0", features = [ "server" ] }
log       = { workspace = true }

sc-cli                  = { workspace = true }
sc-client-api           = { workspace = true }
sc-consensus            = { workspace = true }
sc-consensus-aura       = { workspace = true }
sc-executor             = { workspace = true }
sc-finality-grandpa     = { workspace = true }
sc-keystore             = { workspace = true }
sc-service              = { workspace = true }
sc-telemetry            = { workspace = true }
sc-transaction-pool     = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-core                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-finality-grandpa     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-timestamp            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

# These dependencies are used for the node template's RPCs

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-api                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

# These dependencies are used for runtime benchmarking
frame-benchmarking     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

# Local Dependencies
circuit-standalone-runtime = { path = "../../runtime/standalone" }
pallet-portal-rpc          = { path = "../../pallets/portal/rpc" }
pallet-xdns                = { path = "../../pallets/xdns" }
pallet-xdns-rpc            = { path = "../../pallets/xdns/rpc" }
t3rn-abi                   = { path = "../../types/abi" }
t3rn-primitives            = { path = "../../primitives" }
t3rn-types                 = { path = "../../types" }

pallet-3vm-evm-rpc = { path = "../../pallets/evm/rpc", package = "pallet-evm-rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

[features]
default            = [  ]
runtime-benchmarks = [  ]
