[package]
authors     = [ "devs @ t3rn" ]
build       = "build.rs"
description = "Circuit standalone node"
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "circuit-standalone-node"
repository  = 'https://github.com/t3rn/t3rn'
version     = "1.0.0-alpha.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "circuit-standalone"
path = "src/main.rs"

[dependencies]
# Extras

clap      = { version = "3.0", features = [ "derive" ] }
futures   = "0.3.21"
jsonrpsee = { version = "0.14.0", features = [ "server" ] }
log       = "0.4.19"

sc-cli                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [ "wasmtime" ] }
sc-client-api           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-consensus            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-consensus-aura       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-executor             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [ "wasmtime" ] }
sc-finality-grandpa     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-keystore             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-service              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [ "wasmtime" ] }
sc-telemetry            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus-aura       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-finality-grandpa     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-timestamp            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# These dependencies are used for the node template's RPCs

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# These dependencies are used for runtime benchmarking
frame-benchmarking     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# Local Dependencies
circuit-standalone-runtime = { path = "../../runtime/standalone" }
pallet-portal-rpc          = { path = "../../pallets/portal/rpc" }
pallet-xdns                = { path = "../../pallets/xdns" }
pallet-xdns-rpc            = { path = "../../pallets/xdns/rpc" }
t3rn-abi                   = { path = "../../types/abi" }
t3rn-primitives            = { path = "../../primitives" }
t3rn-types                 = { path = "../../types" }

pallet-3vm-contracts-rpc = { path = "../../pallets/contracts/rpc", package = "pallet-contracts-rpc" }
pallet-3vm-evm-rpc       = { path = "../../pallets/evm/rpc", package = "pallet-evm-rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default            = [  ]
runtime-benchmarks = [  ]
