[package]
authors     = { workspace = true }
build       = "build.rs"
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "t0rn-parachain-collator"
repository  = { workspace = true }
version     = { workspace = true }


[[bin]]
name = "t0rn-collator"
path = "src/main.rs"

[dependencies]
# Extras
#t3rn-parachain-collator = { path = "../parachain", features = [ "t0rn" ], package = "parachain-collator" }
t3rn-parachain-collator = { path = "../parachain", features = [ "default" ], package = "parachain-collator" }
sc-cli                  = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = 'polkadot-v1.2.0' }

[features]
default            = [  ]
runtime-benchmarks = [  ]
