[package]
authors     = { workspace = true }
build       = "build.rs"
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "t0rn-parachain-collator"
repository  = { workspace = true }
version     = { workspace = true }


[[bin]]
name = "t0rn-collator"
path = "src/main.rs"

[dependencies]
# Extras
t0rn-parachain-collator = { path = "../parachain", features = [ "t0rn" ], package = "parachain-collator", default-features = false }
sc-cli                  = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
runtime-benchmarks = [ "t0rn-parachain-collator/runtime-benchmarks" ]
